--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,18 @@
   ],
   "routes": [
     {
+      "src": "/(api/.*)",
+      "dest": "server.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/$1",
+      "headers": {
+        "Cache-Control": "no-cache"
+      },
+      "continue": true
+    },
+    {
       "src": "/(.*)",
       "dest": "server.js"
     }
