--- a/vercel.json
+++ b/vercel.json
@@ -4,20 +4,28 @@
     {
       "src": "server.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "*.html",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "assets/**/*",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
-      "src": "/(api/.*)",
+      "src": "/api/(.*)",
       "dest": "server.js"
     },
     {
-      "src": "/(.*)",
-      "dest": "/$1",
-      "headers": {
-        "Cache-Control": "no-cache"
-      },
-      "continue": true
+      "src": "/(.*)\\.(html|css|js|png|jpg|jpeg|gif|svg|ico)",
+      "dest": "/$1.$2"
+    },
+    {
+      "src": "/",
+      "dest": "/index.html"
     },
     {
       "src": "/(.*)",
