--- a/package.json
+++ b/package.json
@@ -1,24 +1,56 @@
 {
   "name": "cosmicinsights",
-  "version": "1.0.0",
-  "description": "Cosmic Insights - Astrology, Numerology, Tarot & Dream Interpretation",
+  "version": "2.0.0",
+  "description": "Cosmic Insights - AI-powered Astrology, Numerology, Tarot & Dream Interpretation platform",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js",
+    "test": "jest",
+    "lint": "eslint .",
+    "security-audit": "npm audit && node security-check.js",
+    "health-check": "node -e \"require('./server.js')\""
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://huggingface.co/spaces/Snakeeu/cosmicinsights"
+    "url": "https://github.com/Gzeu/cosmicinsights.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "astrology",
+    "numerology",
+    "tarot",
+    "dream-interpretation",
+    "ai-powered",
+    "groq",
+    "mongodb",
+    "express",
+    "cosmic",
+    "spiritual"
+  ],
+  "author": "Gzeu <pricopgeorge@gmail.com>",
+  "license": "MIT",
   "dependencies": {
     "axios": "^1.8.4",
+    "compression": "^1.7.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
-    "mongodb": "^6.15.0"
+    "helmet": "^8.0.0",
+    "joi": "^17.15.0",
+    "mongodb": "^6.15.0",
+    "express-validator": "^7.2.0",
+    "winston": "^3.17.0",
+    "express-slow-down": "^2.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9",
+    "eslint": "^9.17.0",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
