--- a/package.json
+++ b/package.json
@@ -1,56 +1,34 @@
 {
-  "name": "cosmicinsights",
-  "version": "2.0.1",
-  "description": "Cosmic Insights - AI-powered Astrology, Numerology, Tarot & Dream Interpretation platform",
-  "main": "server.js",
+  "name": "cosmic-insights",
+  "version": "1.0.0",
+  "description": "AI-powered spiritual guidance with astrology, numerology, tarot, and dream interpretation",
+  "main": "index.html",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "jest",
-    "lint": "eslint . --fix",
-    "security-audit": "npm audit",
-    "health-check": "node -e \"console.log('Health check passed')\""
-  },
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
+    "start": "echo 'Cosmic Insights is a static web app'",
+    "test": "echo 'No tests specified'"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Gzeu/cosmicinsights.git"
+    "url": "git+https://github.com/Gzeu/cosmicinsights.git"
   },
   "keywords": [
     "astrology",
     "numerology",
     "tarot",
-    "dream-interpretation",
-    "ai-powered",
-    "groq",
-    "mongodb",
-    "express",
-    "cosmic",
-    "spiritual"
+    "dreams",
+    "spiritual",
+    "ai"
   ],
-  "author": "Gzeu <pricopgeorge@gmail.com>",
+  "author": "George Pricop",
   "license": "MIT",
-  "dependencies": {
-    "axios": "^1.8.4",
-    "compression": "^1.7.5",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "express-rate-limit": "^7.5.0",
-    "helmet": "^8.0.0",
-    "joi": "^18.0.1",
-    "mongodb": "^6.15.0",
-    "express-validator": "^7.2.0",
-    "winston": "^3.17.0",
-    "express-slow-down": "^2.0.3"
+  "bugs": {
+    "url": "https://github.com/Gzeu/cosmicinsights/issues"
   },
-  "devDependencies": {
-    "nodemon": "^3.1.9",
-    "eslint": "^9.17.0",
-    "jest": "^29.7.0",
-    "supertest": "^7.0.0"
+  "homepage": "https://github.com/Gzeu/cosmicinsights#readme",
+  "devDependencies": {},
+  "dependencies": {},
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
