🚀 Major upgrade to 2025 dependencies and AI-powered features
- Updated Node.js engine to 20+
- Added comprehensive AI/ML libraries
- Added modern development and testing tools
- Enhanced spiritual AI integrations
- Added analytics and monitoring
- Updated project structure for scalability

--- a/package.json
+++ b/package.json
@@ -1,11 +1,35 @@
 {
   "name": "cosmic-insights",
-  "version": "2.0.1",
-  "description": "AI-powered spiritual guidance platform with astrology, numerology, tarot, and dream interpretation",
+  "version": "3.0.0",
+  "description": "🔮 Revolutionary AI-powered spiritual guidance platform with advanced astrology, numerology, tarot, dream interpretation, and cosmic intelligence - 2025 Enterprise Edition",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js"
+    "dev": "nodemon server.js",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "vite build",
+    "build:server": "tsc && node scripts/optimize-server.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:e2e": "playwright test",
+    "lint": "eslint . --ext .js,.ts,.html",
+    "lint:fix": "eslint . --ext .js,.ts,.html --fix",
+    "format": "prettier --write \"**/*.{js,ts,html,css,json,md}\"",
+    "type-check": "tsc --noEmit",
+    "analyze": "vite-bundle-analyzer",
+    "audit": "npm audit --audit-level moderate",
+    "security": "npm run audit && node scripts/security-scan.js",
+    "validate:readings": "node scripts/validate-spiritual-data.js",
+    "benchmark:ai": "node scripts/benchmark-ai-performance.js",
+    "monitor": "node scripts/monitor-cosmic-analytics.js",
+    "deploy:staging": "vercel",
+    "deploy:production": "vercel --prod",
+    "docker:build": "docker build -t cosmic-insights:latest .",
+    "docker:run": "docker run -p 3000:3000 cosmic-insights:latest",
+    "health-check": "node scripts/health-check.js",
+    "clean": "rimraf dist coverage .vercel"
   },
   "repository": {
     "type": "git",
@@ -18,18 +42,86 @@
     "dreams",
     "spiritual",
     "ai",
+    "machine-learning",
     "mystical",
     "cosmic",
-    "groq"
+    "groq",
+    "openai",
+    "anthropic",
+    "guidance",
+    "divination",
+    "horoscope",
+    "chakras",
+    "meditation",
+    "enterprise",
+    "analytics",
+    "2025"
   ],
-  "author": "George Pricop",
+  "author": {
+    "name": "George Pricop",
+    "email": "pricopgeorge@gmail.com",
+    "url": "https://github.com/Gzeu"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Gzeu/cosmicinsights/issues"
   },
   "homepage": "https://cosmicinsights.vercel.app",
+  "dependencies": {
+    "express": "^4.21.0",
+    "cors": "^2.8.5",
+    "helmet": "^7.1.0",
+    "dotenv": "^16.4.5",
+    "axios": "^1.7.7",
+    "groq-sdk": "^0.7.0",
+    "openai": "^4.65.0",
+    "@anthropic-ai/sdk": "^0.27.3",
+    "winston": "^3.14.2",
+    "zod": "^3.23.8",
+    "uuid": "^10.0.0",
+    "date-fns": "^4.1.0",
+    "lodash": "^4.17.21",
+    "crypto-js": "^4.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "bcryptjs": "^2.4.3",
+    "rate-limiter-flexible": "^5.0.3",
+    "compression": "^1.7.4",
+    "morgan": "^1.10.0",
+    "socket.io": "^4.8.0",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.7.0",
+    "redis": "^4.7.0",
+    "bull": "^4.16.3",
+    "cron": "^3.1.7"
+  },
+  "devDependencies": {
+    "@types/node": "^20.16.10",
+    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.17",
+    "@types/lodash": "^4.17.9",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/uuid": "^10.0.0",
+    "@types/jest": "^29.5.13",
+    "typescript": "^5.6.2",
+    "eslint": "^9.11.1",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
+    "nodemon": "^3.1.7",
+    "prettier": "^3.3.3",
+    "rimraf": "^6.0.1",
+    "vite": "^5.4.8",
+    "vite-bundle-analyzer": "^0.11.0",
+    "@playwright/test": "^1.47.2"
+  },
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  },
+  "volta": {
+    "node": "20.18.0",
+    "npm": "10.8.2"
   }
 }
